# H-MRI_Search_and_Rescue

./: README.md
hkt_Experiments/: CMakeLists.txt  README.md  package.xml
hkt_Experiments/include/: uav_state_tf_closer.h
hkt_Experiments/launch/: 1_UAV_fullyAutonomousMotion.launch  2_UAV_fullyAutonomousMotion.launch  3_UAV_fullyAutonomousMotion.launch  5_UAV_fullyAutonomousMotion.launch  DONT_PANIC  cleanup.sh  defaultExperiment_2rob.sh  defaultExperiment_3rob.sh  defaultExperiment_5rob.sh  formation_control_exp.sh  full_control_exp.sh  generate_exp.py  generate_startup_exp.sh  octomap_mapping.launch  setup_exp.sh
hkt_Experiments/launch/include/: gazebo_qc_traj_playback.launch
hkt_Experiments/src/: uav_state_tf_closer.cpp
hkt_Experiments/trajectories/good_backup_simSpirals/simSpiral/: traj1.txt
hkt_Experiments/trajectories/good_backup_simSpirals/simSpiral/bckp/: traj1.txt  traj2.txt
hkt_Experiments/trajectories/good_backup_simSpirals/simSpiral_3rob/: traj2.txt  traj3.txt
hkt_Experiments/trajectories/simCircle/: traj1.txt  traj2.txt
hkt_Experiments/trajectories/simSpiral/: traj2.txt
hkt_Experiments/trajectories/simSpiral_3rob/: traj2.txt  traj3.txt
hkt_Experiments/trajectories/simSpiral_5rob/: traj1.txt  traj2.txt  traj3.txt  traj4.txt  traj5.txt
tk_flyto/: CMakeLists.txt  package.xml
tk_flyto/include/: tk_filtflyto.hpp
tk_flyto/launch/: flyto.launch  joy_flight.launch~
tk_flyto/src/: tk_filtflyto.cpp
tk_flyto/src/tker_teleop/: core.cpp  tker_teleop.cpp
traverse_blend_vr/: .gitignore  README.md
traverse_blend_vr/Documentation/: output_doublevector_20151027_1425  output_vector_20151027_1425vector_20151027_1427
traverse_blend_vr/blender/blend_files/: Desk.blend  PickAndMove.blend_2.blend  addObject.blend  bakery.blend  barrel_br.blend  blackwall_br.blend  camera.blend  empty.blend  morse_viz_v1.0.1.blend  morse_viz_v1.0.blend  morse_viz_v1.1.blend  morse_viz_v1.1.blend1  morse_viz_v1.1.blend2  morse_viz_v1.2.blend  morse_viz_v1.2.blend1  morse_viz_v1.2.blend2  morse_viz_v1.3.blend1  morse_viz_v1.3.blend2  octoblend_v1.3.blend  octoblend_v1.3.blend1  octoblend_v1.3.blend2  octoblend_v1.4.blend  octoblend_v1.4.blend1  octoblend_v1.4.blend2  octoblend_v1.5.blend  octoblend_v1.6.blend  octoblend_v1.7.blend  octoblend_v1.8.blend  octoblend_v2.0.blend  octoblend_v2.1.blend  octoblend_v2.2.blend  octoblend_vHKT.blend  ramp.blend  ramp_br.blend  sidewall.blend  sidewall_blenderrender.blend  testbuildBlend.blend  traverse_vr_full_autonomous.blend  traverse_vr_full_control.blend  traverse_vr_semi_auto_control.blend  (+2 more)
traverse_blend_vr/blender/scripts/: motion.py  (+19 more)
traverse_blend_vr/catkin_ws/src/misc_py/: CMakeLists.txt  package.xml  setup.py
traverse_blend_vr/catkin_ws/src/o2b_gazebo/: CMakeLists.txt  package.xml
traverse_blend_vr/catkin_ws/src/o2b_gazebo/launch/: arena_4.launch  start.launch  test_arena.launch
traverse_blend_vr/catkin_ws/src/o2b_gazebo/models/: barrel.dae  blackwall.dae  ramp.dae  sidewall.dae  suzanne.dae  suzanne.stl  uneven_surface.dae  uneven_surface_cr.dae
traverse_blend_vr/catkin_ws/src/o2b_gazebo/worlds/: arena_4.world  my_mesh.world  suzanne.world  test_arena.world  test_arena.world~
traverse_blend_vr/cpp/octomutils/: CMakeLists.txt  README.md
traverse_blend_vr/cpp/octomutils/src/: binaryoctree.cpp  binaryoctree.h  buildBlend.cpp  compareoctrees.cpp  compareoctrees.h  main.cpp  mapUpdate.cpp  octomaptoblend.cpp  octomaptoblend.h  showSubtrees.cpp  updateOctree.cpp
traverse_blend_vr/python/: bakehouse.py  bakery.py  batchappend.py  createBakery.py  createMesh.py  createObjects.py  create_cubes.py  directoryWatch.py  fillfaces.py  findInnerFaces.py  mapToBlend.py  morse_viz_client.py  moveObjectWASD.py  rospyStandalone.py  splitOctree.py  testCalcOrigin.py  testPyVersion.py  test_bakery.py  test_static.py  testblendfiles.py
traverse_blend_vr/ros_launch/: static_uav_cam_tf.launch
traverse_blend_vr/scripts/: auto_convert.sh  createMesh.py  getOctomap.sh  joinFaces.py  mergeCloseNodes.py  runScript.py
traverse_flyto_safe/: CMakeLists.txt  flyto_safe_plugins.xml  package.xml
traverse_flyto_safe/include/behaviors/: Flyto_safe.hpp  Neighbor.hpp
traverse_flyto_safe/include/control/: FormationControl.hpp  FormationElement.hpp
traverse_flyto_safe/launch/: firefly_tkcore_gazebo.launch  formation_master.launch  formation_slave_gazebo.launch
traverse_flyto_safe/launch/includes/: UAV_gazebo.launch
traverse_flyto_safe/src/behaviors/: Flyto_safe.cpp
traverse_flyto_safe/src/control/: FormationControl.cpp  FormationElement.cpp  FormationSlave.cpp  FormationSlaveNode.cpp  FormationSlaveOptions.cpp  Main.cpp
traverse_formation_mm/: CMakeLists.txt  README.md  formation_mm_plugins.xml  package.xml
traverse_formation_mm/include/behaviors/: Formation.hpp
traverse_formation_mm/include/control/: FormationControl.hpp  FormationSlave.h  FormationSlaveOptions.hpp
traverse_formation_mm/launch/: boundingbox_TH.launch  demo_TH_octo_43.launch  demo_TH_octo_44.launch  firefly_tkcore_gazebo.launch  formation_master.launch  formation_slave_TH.launch  formation_slave_gazebo.launch  joystick_TH.launch  mk_interface_TH.launch  quickstart_mm.sh  quickstart_slave.sh  start_formation_slave_with_qcID.launch  static_tf_map_world.launch  tk_core_TH.launch  vicon_host.launch
traverse_formation_mm/launch/includes/: UAV_gazebo.launch  tk_gazebo_interface.launch
traverse_formation_mm/src/behaviors/: AbstractGraphNode.cpp  Formation.cpp  Neighbor.cpp
traverse_formation_mm/src/control/: FormationControl.cpp  FormationElement.cpp  FormationSlaveNode.cpp
traverse_gazebo/: CMakeLists.txt  README.md  arena_8walls_blocks_ramps.x3d  package.xml
traverse_gazebo/launch/: arena.launch  arena_8walls_blocks_4ramps.launch  arena_HKT_1.launch  start.launch
traverse_gazebo/models/barrel_110l/: model.sdf
traverse_gazebo/scripts/: blend2world.py  find_barrels.py
traverse_gazebo/worlds/: arena_8walls_blocks_ramps.world  arena_HKT_10.world  arena_HKT_18.world  arena_HKT_2.world  arena_HKT_4.world  arena_HKT_9.world  light_test.world  myempty.world
(+28 files in other folders)
