<?xml version="1.0"?>

<package>
  <name>hkt_experiments</name>
  <version>0.0.0</version>
  <description>HKT Experiments</description>

  <maintainer email="aahmad@tuebingen.mpg.de">Eugen Ruff</maintainer>

  <license>BSD</license>

  <author>Aamir Ahmad</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
    <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>telekyb_base</build_depend>
  <build_depend>tk_behavior</build_depend>
  <build_depend>telekyb_interface</build_depend>
  <build_depend>telekyb_joystick</build_depend>
  <build_depend>tk_draft_msgs</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>tf</run_depend>
    <run_depend>rospy</run_depend>  
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>telekyb_base</run_depend>
  <run_depend>tk_behavior</run_depend>
  <run_depend>telekyb_interface</run_depend>
  <run_depend>telekyb_joystick</run_depend>
  <run_depend>tk_draft_msgs</run_depend>
  <run_depend>cmake_modules</run_depend>


    <export>
  	<!--<tk_behavior plugin="${prefix}/formation_mm_plugins.xml" />-->
  </export>


</package>
