<package format="2">
  <name>traverse_gazebo</name>
  <version>1.2.4</version>
  <description>
  	This package provides simulation environments for the traverse project.
  </description>
  <maintainer email="eugen.ruff@tuebingen.mpg.de">Eugen Ruff</maintainer>
  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
</package>
