<package>
  <name>misc_py</name>
  <version>1.0.0</version>

  <description>
	  Collection of python scripts
  </description>

  <author>Eugen Ruff</author>
  <author email="eugen.ruff@student.uni-tuebingen.de">Eugen Ruff</author>
  <maintainer email="eugen.ruff@student.uni-tuebingen.deu">Eugen Ruff</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>

  <run_depend>rospy</run_depend>
</package>
