<package>
  <name>o2b_gazebo</name>
  <version>1.0.0</version>

  <description>
	  Provides models for experiments resembling the real world counterpart
  </description>

  <author>Eugen Ruff</author>
  <author email="eugen.ruff@student.uni-tuebingen.de">Eugen Ruff</author>
  <maintainer email="eugen.ruff@student.uni-tuebingen.deu">Eugen Ruff</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>gazebo_ros</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>gazebo_ros</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>gazebo_ros</test_depend> -->

<export>
    <gazebo_ros gazebo_media_path="${prefix}"/>
</export>

</package>
